# konofetch

./: .gitignore  README.md  pyproject.toml
anim/: 1.txt  102.txt  104.txt  11.txt  111.txt  113.txt  116.txt  117.txt  12.txt  120.txt  13.txt  17.txt  19.txt  22.txt  23.txt  28.txt  29.txt  30.txt  31.txt  34.txt  38.txt  39.txt  43.txt  46.txt  47.txt  48.txt  49.txt  50.txt  51.txt  52.txt  53.txt  54.txt  55.txt  56.txt  57.txt  58.txt  60.txt  64.txt  65.txt  66.txt  (+9 more)
konofetch/: __init__.py  fetch.py  fmt.py  layout.py  main.py  state.py
konofetch/anim/: 10.txt  100.txt  101.txt  103.txt  105.txt  106.txt  107.txt  108.txt  109.txt  110.txt  112.txt  114.txt  115.txt  118.txt  119.txt  14.txt  15.txt  16.txt  18.txt  2.txt  20.txt  21.txt  24.txt  25.txt  26.txt  27.txt  3.txt  32.txt  33.txt  35.txt  36.txt  37.txt  4.txt  40.txt  41.txt  42.txt  44.txt  45.txt  5.txt  59.txt  (+31 more)
